repoze.configuration Changelog
==============================

Next release
------------

- Make discriminator conflict detection actually work.

- Show actual lines from conflicting files when possible during a
  discriminator conflict.

- Ignore import errors when trying to resolve entry point loads.

- Add a ``popvalue`` method to the context; it works like ``getvalue``
  except it pops the value out of the structure supplied instead of
  just getting it.

- It was not possible to resolve the single dot ``.`` using
  repoze.configuration.context.Context.resolve to the current package.

- Using a Python %(interpolation)s marker in any string value allows
  you to replace values in strings.  For example, using "%(here)s" in
  a string value would attempt to resolve the name "here" from the
  registry as a key.

- Use pyyaml's SafeLoader rather than Loader: we don't really need to
  be able to construct arbitrary Python objects.

0.2 (2009-07-13)
----------------

- Trying to read any directive section that wasn't a YAML mapping
  caused a TypeError (e.g. ``construct_scalar takes no argument
  'deep'``).

0.1 (2009-06-22)
----------------

- Initial release.